--- a/app/src/main/res/layout/planet.xml
+++ b/app/src/main/res/layout/planet.xml
@@ -28,7 +28,9 @@
             android:layout_width="wrap_content"
             android:text="description"
             android:textSize="20sp"
-            android:id="@+id/description"/>
+            android:id="@+id/description"
+
+            />
 
     </LinearLayout>
 </LinearLayout>
