--- a/app/src/main/res/layout/my_row.xml
+++ b/app/src/main/res/layout/my_row.xml
@@ -8,10 +8,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="-71dp"
-        >
+        android:layout_height="wrap_content"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <ImageView
@@ -30,18 +32,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+         android:layout_marginRight="10dp"
+
             android:text="Info"
-            android:textStyle="bold"
+            android:textColor="#fff"
             app:layout_constraintStart_toStartOf="@+id/Listeplanete"
             app:layout_constraintTop_toBottomOf="@+id/Listeplanete" />
 
         <TextView
             android:id="@+id/Listeplanete"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
             android:layout_marginTop="16dp"
+            android:textColor="#fff"
             android:text="Planete"
             app:layout_constraintStart_toEndOf="@+id/planete"
             app:layout_constraintTop_toTopOf="parent" />
@@ -52,8 +58,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="96dp"
             app:cardElevation="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="0dp">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
