--- a/app/src/main/res/layout/activity_aide.xml
+++ b/app/src/main/res/layout/activity_aide.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg"
     tools:context="com.example.astrofn.Aide">
-
+//commentaire
 
     <TextView
         android:id="@+id/nawres"
