--- a/app/src/main/res/layout/activity_liste_planet.xml
+++ b/app/src/main/res/layout/activity_liste_planet.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg"
     tools:context="com.example.astrofn.listePlanet">
+    //commentaire
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
