--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.207"
         tools:src="@tools:sample/avatars" />
+    //commentaire
 
     <TextView
         android:id="@+id/Description"
